# petstore-grpc

./: .dockerignore  .gitignore  .prettierignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  allurerc.yml  docker-compose.postgres-ephemeral.yml  docker-compose.staging.yml  docker-compose.yml  envoy.yaml  fly.toml  index.html  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: proto-reviewer.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/regenerate-protos/: SKILL.md
.claude/skills/run-server/: SKILL.md
.fly/dev/: fly.toml
.fly/pr/: fly.toml
.fly/prod/: fly.toml
.fly/staging/: fly.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-fly-dev.yml  deploy-fly-pr.yml  deploy-fly-staging.yml  docs.yml  push-ghcr.yml  release.yml
architecture/: index.html
cli/: __init__.py  __main__.py  main.py
docs/: architecture.md  cli.md  configuration.md  index.md  openapi.json  running-the-server.md  running-the-tests.md
docs/gRPC_client/: health.md  pets.md  store.md  user.md
docs/grpc/: grpc.md
fly/: start-grpcui.sh  supervisord.conf
gRPC_client/health/: index.html
gRPC_client/pets/: index.html
gRPC_client/store/: index.html
gRPC_client/user/: index.html
grpc/grpc/: index.html
grpcui-assets/: banner.css  banner.js
proto/petstore/v1/: common.proto  health copy.proto  health.proto  pet.proto  store.proto  user.proto
running-the-server/: index.html
running-the-tests/: index.html
scripts/: gen_grpc_web.sh  gen_protos.sh  generate_grpc_docs.py
search/: search_index.json
src/petstore_grpc/: __init__.py  __main__.py  config.py  db.py  server.py
src/petstore_grpc/services/: _memory.py  error_mapping.py  health.py  pet.py  store.py  user.py
tests/: conftest.py
tests/integration/: test_server_startup.py
tests/load/: locustfile.py  scenarios.py
tests/system/: __init__.py
tests/system/e2e/: __init__.py  clients.py  conftest.py  test_transport_bdd.py  test_transport_e2e.py
tests/system/e2e/features/: petstore_transport.feature
tests/unit/: test_cli_config.py  test_cli_retry.py  test_health.py
web/: .gitignore  package-lock.json  package.json  tsconfig.json
web/demo/: index.html  main.ts
web/grpc/: HealthClient.ts
